# arwen

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Gemfile  README.md  THIRD-PARTY-LICENSES  dy-bin  mkdocs.yml  new_binary  pixi.toml  versions.json
.github/: ci.yml
.github/workflows/: ci.yml  docs.yml  python-bindings.yml  release-plz.yml  release-python.yml  release.yml
crates/arwen/: Cargo.toml
crates/arwen-codesign/: Cargo.toml  README.md
crates/arwen-codesign/examples/: codesign_tool.rs
crates/arwen-codesign/src/: lib.rs
crates/arwen-core/: Cargo.toml
crates/arwen-core/src/: lib.rs
crates/arwen-elf/: Cargo.toml
crates/arwen-elf/src/: container.rs  lib.rs
crates/arwen-elf/src/rewriter/: writer.rs
crates/arwen-elf/tests/: elf_tests.rs
crates/arwen-elf/tests/snapshots/: elf_tests__force_rpath.snap  elf_tests__force_rpath.snap.new  elf_tests__rpath_add-2.snap  elf_tests__rpath_add.snap  elf_tests__rpath_add.snap.new  elf_tests__rpath_remove.snap  elf_tests__rpath_remove.snap.new  elf_tests__rpath_set-2.snap  elf_tests__rpath_set.snap  elf_tests__rpath_set.snap.new  elf_tests__set_page_size-2.snap  elf_tests__set_page_size.snap  elf_tests__set_page_size.snap.new
crates/arwen-macho/: Cargo.toml
crates/arwen-macho/src/: container.rs  error.rs  lib.rs  patcher.rs
crates/arwen-macho/tests/: macho_tests.rs
crates/arwen-macho/tests/snapshots/: macho_tests__change_dylib_id-2.snap  macho_tests__change_dylib_id-3.snap  macho_tests__change_dylib_id.snap  macho_tests__change_dylib_id.snap.new  macho_tests__change_dylib_name@hello_with_rpath-2.snap  macho_tests__change_dylib_name@hello_with_rpath.snap  macho_tests__change_dylib_name@hello_with_rpath.snap.new  macho_tests__change_dylib_name@ls-2.snap  macho_tests__change_dylib_name@ls.snap  macho_tests__change_dylib_name@ls.snap.new  macho_tests__rpath_add@hello_with_rpath.snap  macho_tests__rpath_add@hello_with_rpath.snap.new  macho_tests__rpath_add@ls-2.snap  macho_tests__rpath_add@ls.snap  macho_tests__rpath_add@ls.snap.new  macho_tests__rpath_change@hello_with_rpath-3.snap  macho_tests__rpath_change@hello_with_rpath.snap  macho_tests__rpath_change@hello_with_rpath.snap.new  macho_tests__rpath_change@ls-2.snap  macho_tests__rpath_change@ls.snap  macho_tests__rpath_change@ls.snap.new  macho_tests__rpath_remove@hello_with_rpath-2.snap  macho_tests__rpath_remove@hello_with_rpath.snap  macho_tests__rpath_remove@hello_with_rpath.snap.new  macho_tests__rpath_remove@ls-3.snap  macho_tests__rpath_remove@ls.snap  macho_tests__rpath_remove@ls.snap.new
crates/arwen-write/: Cargo.toml
crates/arwen/src/: lib.rs
crates/arwen/src/cli/: mod.rs
crates/arwen/src/cli/elf/: add_debug_tag.rs  add_needed.rs  add_rpath.rs  clear_execstack.rs  clear_version_symbol.rs  force_rpath.rs  mod.rs  no_default_lib.rs  print_execstack.rs  print_interpreter.rs  print_needed.rs  print_os_abi.rs  print_rpath.rs  print_soname.rs  remove_needed.rs  remove_rpath.rs  rename_dynamic_symbols.rs  replace_needed.rs  set_execstack.rs  set_interpreter.rs  set_os_abi.rs  set_page_size.rs  set_rpath.rs  set_soname.rs  shrink_rpath.rs
crates/arwen/src/cli/macho/: add.rs  change.rs  codesign.rs  delete.rs  install_id.rs  install_name.rs  mod.rs
dev/: 404.html  index.html  sitemap.xml
dev/getting_started/: index.html
dev/patching/elf/: index.html
dev/patching/introduction/: index.html
dev/patching/macho/: index.html
dev/patching/patching_elf/: index.html
dev/patching/patching_macho/: index.html
dev/search/: search_index.json
dev/why_patch/: index.html
docs/: index.md  why_patch.md
docs/elf/: Dockerfile
docs/patching/: elf.md  introduction.md  macho.md  patching_elf.md  patching_macho.md
docs/reference/cli/: arwen.md  arwen_extender.md
docs/source_code/: libcustom.dylib  my_app.c
docs_bin/: Cargo.toml  README.md
docs_bin/src/: main.rs
py-arwen/: Cargo.toml  pixi.toml  pyproject.toml
py-arwen/arwen/: __init__.py  elf.py  macho.py
py-arwen/src/: elf.rs  error.rs  lib.rs  macho.rs  main.rs  meta.rs
py-arwen/tests/: conftest.py  test_elf.py  test_macho.py
src/: commands.rs  elf.rs  lib.rs  macho.rs  main.rs  patcher.rs  utils.rs
src/cli/: add.rs  change.rs  delete.rs  install_id.rs  install_name.rs  mod.rs  remove.rs
src/cli/elf/: add_debug_tag.rs  add_needed.rs  add_rpath.rs  clear_execstack.rs  clear_version_symbol.rs  force_rpath.rs  mod.rs  no_default_lib.rs  print_execstack.rs  print_interpreter.rs  print_needed.rs  print_os_abi.rs  print_rpath.rs  print_soname.rs  remove_needed.rs  remove_rpath.rs  rename_dynamic_symbols.rs  replace_needed.rs  set_execstack.rs  set_interpreter.rs  set_os_abi.rs  set_rpath.rs  set_soname.rs  shrink_rpath.rs
src/elf/: container.rs
src/elf/rewriter/: elf.rs  error.rs  writer.rs
tests/: test_rpath.rs
tests/elf/: conftest.py  test_elf.py
tests/fat/: test_patching.rs
tests/integration/: common.rs  main.rs  test_rpath.rs
tests/python_integration/: conftest.py
tests/rust_integration/macho/: mod.rs  (+2 more)
tests/snapshots/: main__test_rpath__change_dylib_id-2.snap  main__test_rpath__change_dylib_name-2.snap  main__test_rpath__rpath_add-2.snap  main__test_rpath__rpath_change-2.snap  main__test_rpath__rpath_change.snap  main__test_rpath__rpath_remove.snap  test_rpath__change_dylib_id.snap  test_rpath__change_dylib_name.snap  test_rpath__rpath_add.snap  test_rpath__rpath_change-2.snap  test_rpath__rpath_change.snap  test_rpath__rpath_remove-2.snap
tests/unit/: main.rs
tests/x32/: test_patching.rs
tools/bins/: hello_with_rpath
tools/clang/: main.c  mylib.c
tools/libs/: libmylib.dylib
tools/ruby/: hello_with_rpath  ruby.rb
v0.0.2/: 404.html  index.html  sitemap.xml
v0.0.2/getting_started/: index.html
v0.0.2/search/: search_index.json
v0.0.2/source_code/: my_app
v0.0.2/why_patch/: index.html
v0.0.3/: 404.html  index.html  sitemap.xml
v0.0.3/why_patch/: index.html
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.4/why_patch/: index.html
v0.0.5/: 404.html  index.html  sitemap.xml
v0.0.5/source_code/: libcustom.c
v0.0.5/why_patch/: index.html
(+353 files in other folders)
