[workspace]
resolver = "2"
exclude = ["py-arwen/*"]

[workspace.package]
authors = ["nichita morcotilo <nmorkotilo@gmail.com>"]
edition = "2021"
homepage = "https://github.com/nichmor/arwen"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nichmor/arwen"
categories = ["parsing", "development-tools::debugging"]

[package]
authors.workspace = true
description = "A cross-platform, Mach-O and ELF utility to modify installs paths for dynamic libraries or executables."
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "arwen"
readme.workspace = true
repository.workspace = true
version = "0.0.2"

[workspace.dependencies]
goblin = { version = "0.9.3", features = ["mach64"] }
object = { version = "0.36.7", features = ["write", "build"] }
clap = { version = "4.5.26", features = ["derive"] }
scroll = "0.12.0"
thiserror = "2.0.11"


[dependencies]
clap = { workspace = true }
scroll = { workspace = true }
thiserror = { workspace = true }
goblin = { workspace = true }
object.workspace = true


[dev-dependencies]
insta = "1.42.0"
tempfile = "3.16.0"
rstest = "0.25.0"


# [patch.crates-io]
# object = { git = "https://github.com/nichmor/object.git", branch = "feat/expose-header-as-mut" }
# object-rewrite = { git = "https://github.com/nichmor/object.git", branch = "feat/expose-header-as-mut" }

# object = { path = "../object" }
# object-rewrite = { path = "../object/crates/rewrite" }
