[workspace]
resolver = "2"
members = [
    "crates/arwen-core",
    "crates/arwen-elf",
    "crates/arwen-macho",
    "crates/arwen",
]
exclude = ["py-arwen/*"]

[workspace.package]
authors = ["nichita morcotilo <nmorkotilo@gmail.com>"]
edition = "2021"
homepage = "https://github.com/nichmor/arwen"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nichmor/arwen"
categories = ["parsing", "development-tools::debugging"]

[workspace.dependencies]
# Internal crates
arwen-core = { path = "crates/arwen-core", version = "0.0.3" }
arwen-elf = { path = "crates/arwen-elf", version = "0.0.3" }
arwen-macho = { path = "crates/arwen-macho", version = "0.0.3" }

# External dependencies
goblin = { version = "0.10.4", features = ["mach64"] }
object = { version = "0.38.1", features = ["write", "build"] }
clap = { version = "4.5.26", features = ["derive"] }
scroll = "0.13.0"
thiserror = "2.0.11"

# Dev dependencies
insta = "1.42.0"
tempfile = "3.16.0"
rstest = "0.26.0"
