[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "py-arwen"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
description = "A cross-platform, Mach-O and ELF utility to modify installs paths for dynamic libraries or executables."

[tool.maturin]
features = ["pyo3/extension-module"]
