[package]
name = "arwen-codesign"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Ad-hoc code signing for Mach-O binaries"
keywords = ["macho", "codesign", "signing", "darwin", "binary"]

[package.metadata.cargo-machete]
ignored = []

[[example]]
name = "codesign_tool"
path = "examples/codesign_tool.rs"

[dependencies]
goblin = { workspace = true }
scroll = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
