[package]
name = "arwen-elf"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "ELF binary patching library"
keywords = ["elf", "binary", "patching", "linker"]

[package.metadata.cargo-machete]
ignored = ["arwen-core"]

[dependencies]
arwen-core = { workspace = true }
object = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
goblin = { workspace = true }
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
