[package]
name = "arwen-macho"
version = "0.0.3"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "Mach-O binary patching library"
keywords = ["macho", "binary", "patching", "dylib", "darwin"]

[dependencies]
arwen-core = { workspace = true }
goblin = { workspace = true }
scroll = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
