[package]
name = "arwen"
version = "0.0.5"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
description = "A cross-platform binary patching tool for Mach-O and ELF"

[[bin]]
name = "arwen"
path = "src/main.rs"

[dependencies]
arwen-core = { workspace = true }
arwen-elf = { workspace = true }
arwen-macho = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
